--- a/About.html
+++ b/About.html
@@ -46,16 +46,19 @@
   <h1 class="display-4 fw-bold">About Z-A-S</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">
-      Z-A-S is the personal project of Zeyad Ahmed El-Sukkary, a passionate 15-year-old web developer and aspiring software engineer. Built from scratch with HTML, CSS, and JavaScript, this site showcases Zeyad’s growing skills in responsive design, UI/UX, and dynamic content filtering. Beyond coding, Zeyad is driven by a dream to study at Stanford and one day Start his own Company. This website is a testament to his ambition and love for technology.
+      Z-A-S is the personal project of Zeyad Ahmed El-Sukkary, a passionate 15-year-old web developer and aspiring software engineer. Built from scratch with HTML, CSS, and JavaScript, this site showcases Zeyad’s growing skills in responsive design, UI/UX, and dynamic content filtering. Beyond coding, Zeyad is driven by a dream to study at Stanford and one day Start his own Company. This website is a testament to his ambition and love for technology. <br>And as You may have noticed, we run completely Ad Free, so if you Apreciate our work and want to support us, Feel Free to use the Donate Button Below.
     </p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
       <a href="Discover.html" class="btn btn-primary btn-lg px-4 me-sm-3">Explore Articles</a>
       <a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-outline-success btn-lg px-4">Linktree</a>
+    <a href="https://paypal.me/AhmedSukkary" target="_blank" rel="noopener noreferrer" class="btn btn-light btn-lg px-4 me-sm-3">
+  <i class="bi bi-paypal me-2"></i>Donate via PayPal
+</a>
     </div>
   </div>
   <div class="overflow-hidden" style="max-height: 30vh;">
     <div class="container px-5">
-      <img src="/Z-A-S/pics/About.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
+      <img src="/Z-A-S/pics/about.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="About Zeyad" width="700" height="500" loading="lazy">
     </div>
   </div>
 </div>
