Add text-white class to PayPal donate button
Ensures the PayPal donate button text is visible by adding the 'text-white' class to the button.

--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
       <a href="Discover.html" class="btn btn-primary btn-lg px-4 me-sm-3">Explore Articles</a>
       <a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-outline-success btn-lg px-4">Linktree</a>
-    <a href="https://paypal.me/AhmedSukkary/5" target="_blank" rel="noopener noreferrer" class="btn btn-info btn-lg px-4 me-sm-3">
+    <a href="https://paypal.me/AhmedSukkary/5" target="_blank" rel="noopener noreferrer" class="btn btn-info text-white btn-lg px-4 me-sm-3">
   <i class="bi bi-paypal me-2"></i>Donate via PayPal
 </a>
     </div>
