Update loading button to use spinner UI
Replaced plain 'Loading...' text buttons with spinner-based loading buttons for improved visual feedback and accessibility across About.html, Discover.html, ZAS-News.html, and article.html.

--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -24,7 +24,9 @@
 
   <body class="">
 
-    <button class="loading" id="loading">Loading...</button>    
+    <button class="loading" id="loading"><div class="spinner-grow" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div></button>    
 
 
       <button id="theme-switch" title="Press T to Toggle" class="theme-switch slide-in-left">            
