--- a/About.html
+++ b/About.html
@@ -65,6 +65,8 @@
   </div>
 </div>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=w6PvQqg6uREcvAD5&amp;list=PLhQjrBD2T383q7Vn8QnTsVgSvyLpsqL_R" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
    <button data-bs-toggle="modal" data-bs-target="#heroModal" class="btn btn-outline-secondary col-md-1 justify-content-center text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
