Add featured articles carousel to homepage
Introduces a new 'Featured Articles' carousel section in ZAS-News.html and updates homearticlepreview.js to fetch, render, and show skeletons for featured articles. Also refactors skeleton rendering, improves trending/latest article grids, and streamlines DOM initialization for all homepage article sections.

--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -62,6 +62,15 @@
 
 
       <main>
+
+<!-- Featured Carousel Section -->
+<section class="my-5">
+  <div id="featuredContainer">
+    <!-- JS will inject the carousel here -->
+  </div>
+</section>
+
+
         <div class="slide-in-left nonedisplay maintext alert fade-in parent">
           <span class="closebtn fade-in child" onclick="this
 
