Add Favorites feature with UI and scripts
Introduces a Favorites page and navigation link, allowing users to save and view favorite articles. Adds favorites.js for rendering saved articles, updates articlescript.js for favorite button logic, and applies related style changes. Navigation menus across pages now include a Favorites link.

--- a/404.html
+++ b/404.html
@@ -45,6 +45,7 @@ h1 {
         <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
         <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
         <li class="fade-in nav-item" title="Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
+        <li class="fade-in nav-item" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
     </ul>
     </div>
   </header>
