--- a/Favorites.html
+++ b/Favorites.html
@@ -20,31 +20,21 @@
 </button>
 
 <button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)"><path d="M160-760v-80h640v80H160Zm280 640v-408L336-424l-56-56 200-200 200 200-56 56-104-104v408h-80Z"/></svg></button>
-<nav class="py-2 border-bottom">
-    <div class="d-flex justify-content-center py-3">
- <ul class="nav nav-pills col-md-4 justify-content-center">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
-        <li class="fade-in nav-item" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
-    </ul>
-    </div>
-    <div class="nav nav-pills justify-content-center">
-  <ul id="categoryNav" class="nav nav-underline justify-content-center">
-    <!-- Categories inserted here dynamically -->
-  </ul>
-</div>
-  </nav>
-  
 <header class="py-3 mb-4 border-bottom">
+
     <div class="container d-flex flex-wrap justify-content-center align-items-center">
     <a class="logo d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none" href="ZAS-News.html">
 <img src="pics/Logo.svg" class="logo slide-in-left" alt="Logo">
 
     </a>
-      <form class="justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0" role="search">
-        <input type="search" class="form-control" placeholder="Search..." id="searchbar" aria-label="Search">
-      </form>
+    <div class="d-flex justify-content-center py-3">
+ <ul class="nav nav-pills justify-content-center">
+        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
+        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
+        <li class="fade-in nav-item" title="Discover"><a class="link nav-link" href="Discover.html">Discover</a></li>
+        <li class="fade-in nav-item" title="Current | Favorites"><a class="link active nav-link" id="activenav" aria-current="page" href="Favorites.html">Favorites</a></li>
+    </ul>
+    </div>
     </div>
 
   </header>
@@ -57,24 +47,8 @@
 
 
 <div class="d-flex justify-content-between align-items-center gap-2 mb-3">
-  <h1 class="fade-in mb-0 flex-grow-1 col-md-3">Latest News</h1>
+  <h1 class="fade-in mb-0 flex-grow-1 col-md-3">your Favorites</h1>
 
-  <!-- Filter by Author -->
-<select id="authorFilter" class="form-select w-auto col-md-2">
-
-</select>
-
-
-  <div class="d-flex align-items-center gap-2">
-    <!-- Sort Options -->
-    <select id="sortOptions" class="form-select w-auto col-md-3">
-      <option value="date" selected>Sort by Date</option>
-      <option value="trending">Filter by Trending</option>
-      <option value="title">Sort by Title</option>
-      <option value="author">Sort by Author</option>
-      <option value="category">Sort by Category</option>
-    </select>
-</div>
   
 </div>
 
@@ -87,16 +61,11 @@
 
 
   <!-- Articles container -->
-  <div class="flex-grow-1" id="article-preview-container">
-    <!-- JS will inject articles here -->
+  <!-- favorites.html -->
+<div id="favorites-preview-container"></div>
+<p id="noFavoritesMsg" class="nonedisplay">You haven't added any favorites yet.</p>
 
 
-    <p id="noArticlesMsg" class="text-center my-4 nonedisplay" >No articles found based on the current parameters.</p>
-
-  </div>
-<div id="noArticlesMsg" class="nonedisplay">No articles found.</div>
-
-       </div>
     </section>
 </main>
 
@@ -160,11 +129,9 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/marked@16.0.0/lib/marked.umd.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
-<script src="scripts/darkmode.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script type="text/javascript" src="scripts/darkmode.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
-
-<script type="text/javascript" src="scripts/Discoversystem.js"></script>
+<script type="text/javascript" src="scripts/favorites.js"></script>
 </body>
 </html>
