--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -56,7 +56,8 @@
         <li class="fade-in nav-item" title="Home"><a class="link active nav-link" id="activenav" aria-current="page" href="ZAS-News.html">Home</a></li>
         <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
         <li class="fade-in nav-item" title="Current | Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
-    </ul>
+        <li class="fade-in nav-item" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
+   </ul>
     </div>
   </header>
 
