--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -123,9 +123,9 @@
   </a>
 
   <ul class="nav col-md-4 justify-content-end">
-    <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext">Home</a></li>
-    <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext">Discover</a></li>
-    <li class="nav-item"><a href="About.html" class="nav-link secondarytext px-2 ">About us</a></li>
+    <li class="nav-item"><a href="ZAS-News.html" class="nav-link px-2 secondarytext link">Home</a></li>
+    <li class="nav-item"><a href="Discover.html" class="nav-link px-2 secondarytext link">Discover</a></li>
+    <li class="nav-item"><a href="About.html" class="nav-link px-2 secondarytext link">About us</a></li>
     <li class="nav-item fade-in"><button id="resetStorage" class="btn btn-outline-danger btn-sm px-2">Reset Data</button></li>
     <li class="nav-item fade-in"><a href="https://linktr.ee/zeyadsukk" target="_blank" class="btn btn-success btn-sm ms-2">Linktree</a></li>
   </ul>
