--- a/Favorites.html
+++ b/Favorites.html
@@ -56,7 +56,7 @@
 
 
 
-       <div class="d-flex flex-wrap news-container">
+       <div class="d-flex flex-column news-container">
   <!-- Filter list -->
 
 
