--- a/Favorites.html
+++ b/Favorites.html
@@ -22,6 +22,7 @@
 <button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)"><path d="M160-760v-80h640v80H160Zm280 640v-408L336-424l-56-56 200-200 200 200-56 56-104-104v408h-80Z"/></svg></button>
 <main>
   <section class="Latest-news">
+    <div class="container my-5 px-4 px-md-5">
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       
       <!-- Left column: description and button -->
@@ -80,7 +81,7 @@
 
         </div>
       </div>
-
+      </div>
     </div>
 
        <div class="d-flex flex-column news-container">
