--- a/Favorites.html
+++ b/Favorites.html
@@ -70,7 +70,7 @@
               </a>
 
               <!-- Favorites (ACTIVE PAGE) -->
-              <div class="col nav-feature fade-in nav-active"
+              <div class="col nav-feature fade-in feature-active"
                   style="animation-delay: 0.4s;">
                 <div class="d-flex flex-column gap-2 h-100">
                   <div class="feature-icon-small"></div>
@@ -94,8 +94,10 @@
 
   <!-- Articles container -->
   <!-- favorites.html -->
-<div id="favorites-preview-container"></div>
-<div class="col-12 justify-content-center align-items-center mb-5 mt-5"><h2 id="noFavoritesMsg" class="nonedisplay">You haven't added any favorites yet.</h2></div>
+<div class="col-12 d-flex justify-content-center mb-5 mt-5">
+  <h2 id="noFavoritesMsg" class="nonedisplay">
+    You haven't added any favorites yet.
+  </h2>
 </div>
 
     </section>
