--- a/Favorites.html
+++ b/Favorites.html
@@ -94,7 +94,7 @@
 
   <!-- Articles container -->
   <!-- favorites.html -->
-<div class="col-12 d-flex justify-content-center mb-5 mt-5">
+<div class="col-12 d-flex py-5 mb-5 mt-5">
   <h2 id="noFavoritesMsg" class="nonedisplay">
     You haven't added any favorites yet.
   </h2>
