--- a/Favorites.html
+++ b/Favorites.html
@@ -87,17 +87,14 @@
       </div>
       </div>
     </div>
-
-       <div class="d-flex flex-column news-container">
-  <!-- Filter list -->
-
-
-  <!-- Articles container -->
-  <!-- favorites.html -->
-<div class="col-12 d-flex py-5 mb-5 mt-5">
-  <h2 id="noFavoritesMsg" class="nonedisplay">
-    You haven't added any favorites yet.
-  </h2>
+<div class="news-container">
+  <div id="favorites-preview-container" class="row">
+  </div>
+    <div class="col-12 d-flex py-5 mb-5 mt-5">
+      <h2 id="noFavoritesMsg" class="nonedisplay">
+        You haven't added any favorites yet.
+      </h2>
+    </div>
 </div>
 
     </section>
