--- a/Favorites.html
+++ b/Favorites.html
@@ -90,7 +90,7 @@
 <div class="news-container">
   <div id="favorites-preview-container" class="row">
   </div>
-    <div class="col-12 d-flex py-5 mb-5 mt-5">
+    <div class="col-12 d-flex py-5 mb-5 mt-5 justify-content-center align-items-center">
       <h2 id="noFavoritesMsg" class="nonedisplay">
         You haven't added any favorites yet.
       </h2>
