smoother fade-in animations

--- a/Discover.html
+++ b/Discover.html
@@ -22,13 +22,21 @@
 <button class="fade-in scrolltop" onclick="scrollToTop()" id="scrollBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--main)"><path d="M160-760v-80h640v80H160Zm280 640v-408L336-424l-56-56 200-200 200 200-56 56-104-104v408h-80Z"/></svg></button>
 <nav class="py-2 border-bottom">
     <div class="d-flex justify-content-center py-3">
- <ul class="nav nav-pills col-md-4 justify-content-center">
-        <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover"><a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a></li>
-        <li class="fade-in nav-item" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
-    </ul>
-    </div>
+  <ul class="nav nav-pills col-md-4 justify-content-center">
+    <li class="fade-in nav-item" style="animation-delay: 0.1s;" title="Home">
+      <a class="link nav-link" href="ZAS-News.html">Home</a>
+    </li>
+    <li class="fade-in nav-item" style="animation-delay: 0.2s;" title="Learn more About us">
+      <a class="link nav-link" href="About.html">About Us</a>
+    </li>
+    <li class="fade-in nav-item" style="animation-delay: 0.3s;" title="Current | Discover">
+      <a class="link active nav-link" id="activenav" aria-current="page" href="Discover.html">Discover</a>
+    </li>
+    <li class="fade-in nav-item" style="animation-delay: 0.4s;" title="check out your Saved Articles">
+      <a class="link nav-link" href="Favorites.html">Favorites</a>
+    </li>
+  </ul>
+</div>
     <div class="nav nav-pills justify-content-center">
   <ul id="categoryNav" class="nav nav-underline justify-content-center">
     <!-- Categories inserted here dynamically -->
