smoother fade in animations

--- a/About.html
+++ b/About.html
@@ -33,10 +33,10 @@
 
     </a>
  <ul class="nav nav-pills justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0">
-      <li class="fade-in nav-item" title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
-      <li class="fade-in nav-item" title="About"><a class="link active nav-link" id="activenav" aria-current="page" href="About.html">About us</a></li>
-      <li class="fade-in  nav-item" title="Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
-      <li class="fade-in nav-item" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
+      <li class="fade-in nav-item" style="animation-delay: 0.1s;"title="Home"><a class="link nav-link" href="ZAS-News.html">Home</a></li>
+      <li class="fade-in nav-item" style="animation-delay: 0.2s;"title="About"><a class="link active nav-link" id="activenav" aria-current="page" href="About.html">About us</a></li>
+      <li class="fade-in  nav-item" style="animation-delay: 0.3s;"title="Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
+      <li class="fade-in nav-item" style="animation-delay: 0.4s;"title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
     </ul>
     </div>
   </header>
