--- a/ZAS-News.html
+++ b/ZAS-News.html
@@ -53,10 +53,10 @@
 
     </a>
  <ul class="nav nav-pills justify-content-center  col-12 col-lg-auto mb-3 mb-lg-0">
-        <li class="fade-in nav-item" title="Home"><a class="link active nav-link" id="activenav" aria-current="page" href="ZAS-News.html">Home</a></li>
-        <li class="fade-in nav-item" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
-        <li class="fade-in nav-item" title="Current | Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
-        <li class="fade-in nav-item" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
+        <li class="fade-in nav-item" style="animation-delay: 0.1s;" title="Home"><a class="link active nav-link" id="activenav" aria-current="page" href="ZAS-News.html">Home</a></li>
+        <li class="fade-in nav-item" style="animation-delay: 0.2s;" title="Learn more About us"><a class="link nav-link" href="About.html">About Us</a></li>
+        <li class="fade-in nav-item" style="animation-delay: 0.3s;" title="Current | Discover"><a class="link nav-link"  href="Discover.html">Discover</a></li>
+        <li class="fade-in nav-item" style="animation-delay: 0.4s;" title="check out your Saved Articles"><a class="link nav-link" href="Favorites.html">Favorites</a></li>
    </ul>
     </div>
   </header>
